1.4.1 (14.05.2016):

* Also import text layer when importing PDF or DjVu.
* + option in Edit/Preference to allow/forbid batch scanning from a flatbed
* Store date as string to avoid time zone problems
  Closes Debian bug #823626 (Date in file name off by one day when saving)


1.4.0 (14.04.2016):

* Fixed double file overwrite confirmation
* Update paper size combobox after setting profile
* Integrate user-defined tools into scan post-process
* + dialog window for user-defined tools
* Fixed extended page numbering toggle
* Fixed restoring crashed session
* Fixed paper sizes after switching device. Closes bug #216
  (options for A4, US Legal, and US Letter have disappeared in the Geometry
   options for Scansnap IX500 in 1.3.9)
* Correct hiding/showing of widgets when saving JPEG
* Save session after an action rather than before so as not to lose the last
  action in the event of a crash
* Update to French translation (thanks to Jean-Marc)


1.3.9 (06.03.2016):

* Fixed warning from Perl 5.10.1 about use of uninitialized value in subroutine
  entry in Gscan2pdf/Dialog/Scan/CLI.pm
* Store absolute date instead of offset
* If get_message_area() not available (because gtk+ is too old),
  use get_content_area() or vbox()
* Differentiate between readonly file and directory in error messages
* Fixed bug opening session file
* A deleted profile stays deleted across sessions
* Fixed multiple reload callback, affecting setting profiles
* If a profile affects geometry settings, update paper size widget appropriately
  Closes Debian bug #815552 (fails to set geometry when loading saved profile)


1.3.8 (04.02.2016):

* Fixed bug saving TIFF, introduced in v1.3.6.
  Closes Debian bug #812684 (cannot save in .tif format)
* Fixed bug running tesseract from OCR dialog, introduced in v1.3.7.
* Fixed bug saving, retrieving and applying profiles. Closes bug #163:
  (paper size changes not applied consistently)
* Update to Czech translation (thanks to Pavel Borecki)